fix control button alignment

--- a/src/Components/PlayControl/index.less
+++ b/src/Components/PlayControl/index.less
@@ -62,14 +62,11 @@
       outline: none;
       appearance: none;
       cursor: pointer;
-      margin: 0 2px;
 
       &.pause {
-        width: 52px;
         font-size: 36px;
       }
       &.ward {
-        width: 32px;
         font-size: 30px;
       }
     }
